--- a/app/Resources/views/printer/index.html.twig
+++ b/app/Resources/views/printer/index.html.twig
@@ -192,7 +192,7 @@
        number_of_pages = Math.ceil($('#listCartridge').children().length / show_per_page);
       }
 
-      var nav = '<ul class="pagination"><li><a href="javascript:previous();">&laquo;</a>';
+      var nav = '<ul class="pagination pagination-sm"><li><a href="javascript:previous();">&laquo;</a>';
 
       var i = -1;
       while(number_of_pages > ++i){
