finanlisation pagination total

--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -37,7 +37,7 @@
 			      <div class="panel-heading"><h4>Stock de cartouches</h4></div>
 			      <div class="panel-body">
 			      <div class="table-responsive">
-			      	<table class="table table-bordered table-striped ">
+			      	<table class="table table-bordered table-striped " id="tablePrinterHome">
 					    <thead>
 					      <tr>
 					      	<th>Marque</th>
@@ -115,6 +115,29 @@
       });
     });
     </script>
+
+    <script type="text/javascript">
+     $(document).ready( function () {
+    $('#tablePrinterHome').DataTable({
+      "language": {
+            "lengthMenu": "Afficher _MENU_ cartouches par tableau",
+            "zeroRecords": "Aucune cartouche en stock",
+            "info": "Cartouche de _START_ à _END_ sur _TOTAL_ cartouches",
+            "infoEmpty": "No records available",
+            "search":         "Rechercher:",
+            "infoFiltered": "( Filtré sur _MAX_ cartouches au total)",
+            "paginate": {
+                "first":      "Début",
+                "last":       "Fin",
+                "next":       "Suivant",
+                "previous":   "Précédent"
+              }
+        },
+
+        "lengthMenu": [ 5, 10]
+    });
+} );
+   </script>
   {% endblock %}
 
  
