--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -40,7 +40,11 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a href=""><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
-        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        {% if not app.user %}
+        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+        {% else  %}
+        <li><a href="logout"><span class="glyphicon glyphicon-log-out"></span> Deconnexion</a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
