--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,16 +34,19 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
+      {% if app.user %}
         <li class="active"><a href="{{ path('homepage') }}"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp;Accueil</a></li>
         <li><a href="{{ path('printerpage') }}">Imprimante</a></li>
         <li><a href="{{ path('cartridgepage') }}">Cartouche</a></li> 
+        {% endif %}
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!--<li><a href=""><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
-        {% if not app.user %}
-        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+        <li><a>Connecté en tant que <strong>{{ app.user.username }}</strong> <span class="glyphicon glyphicon-user"></span></a></li>
+        <li><a href="logout"><span class="glyphicon glyphicon-log-out"></span> Deconnexion</a></li>  
         {% else  %}
-        <li><a href="logout"><span class="glyphicon glyphicon-log-out"></span> Deconnexion</a></li>
+        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
         {% endif %}
       </ul>
     </div>
