--- a/app/Resources/views/cartridge/index.html.twig
+++ b/app/Resources/views/cartridge/index.html.twig
@@ -225,7 +225,7 @@
             "lengthMenu": "Afficher _MENU_ cartouches par tableau",
             "zeroRecords": "Aucune cartouche en stock",
             "info": "Cartouche de _START_ à _END_ sur _TOTAL_ cartouches",
-            "infoEmpty": "No records available",
+            "infoEmpty": "Pas de résultats disponibles",
             "search":         "Rechercher:",
             "infoFiltered": "( Filtré sur _MAX_ cartouches au total)",
             "paginate": {
