--- a/app/Resources/views/printer/index.html.twig
+++ b/app/Resources/views/printer/index.html.twig
@@ -215,7 +215,7 @@
             "lengthMenu": "Afficher _MENU_ imprimantes par tableau",
             "zeroRecords": "Aucune imprimante en stock",
             "info": "Imprimante de _START_ à _END_ sur _TOTAL_ imprimantes",
-            "infoEmpty": "No records available",
+            "infoEmpty": "Pas de résultats disponibles",
             "search":         "Rechercher:",
             "infoFiltered": "( Filtré sur _MAX_ imprimantes au total)",
             "paginate": {
