ajout d'un utilisateur

--- a/app/Resources/views/admin/index.html.twig
+++ b/app/Resources/views/admin/index.html.twig
@@ -13,6 +13,7 @@
             <th>Nom Utilisateur</th>
             <th>Email</th>
             <th>Rôle</th>
+            <th><em class="fa fa-cog"></em></th>
       </tr>
    </thead>
 
