--- a/app/Resources/views/home/index.html.twig
+++ b/app/Resources/views/home/index.html.twig
@@ -51,7 +51,7 @@
 					      <tr data-quantite={{cartridge.quantite}}>
 					      	<td>{{cartridge.marque}}</td>
 					        <td>{{cartridge.modele}}</td>
-					        <td>{{cartridge.quantite}} {% if cartridge.quantite < 5 and cartridge.quantite >= 3  %} <span class=" glyphicon glyphicon-exclamation-sign"></span> <a href="{{ path('cartridgepage') }}" class="btn btn-warning btnLow">Niveau stock bas <span class="fa fa-chevron-right"></span></a>{% endif%} {% if cartridge.quantite < 3 %} <span class="fa fa-exclamation-triangle"></span><span class="fa fa-exclamation-triangle"></span> <a href="{{ path('cartridgepage') }}" class="btn btn-danger btnVeryLow">Niveau stock très bas <span class="fa fa-chevron-right"></a>{% endif%}</td>
+					        <td>{{cartridge.quantite}} {% if cartridge.quantite < 5 and cartridge.quantite >= 3  %} <span class=" glyphicon glyphicon-exclamation-sign"></span>{% if app.user and is_granted('ROLE_ADMIN') %} <a href="{{ path('cartridgepage') }}" class="btn btn-warning btnLow">Niveau stock bas <span class="fa fa-chevron-right"></span></a>{% endif%} {% if cartridge.quantite < 3 %} <span class="fa fa-exclamation-triangle"></span><span class="fa fa-exclamation-triangle"></span> <a href="{{ path('cartridgepage') }}" class="btn btn-danger btnVeryLow">Niveau stock très bas <span class="fa fa-chevron-right"></a>{% endif%}{% endif%}</td>
 					      </tr>
 					      {% endfor %}
 					    </tbody>
@@ -74,11 +74,12 @@
 			  <div class="panel-body">
 				   <ul class="list-group">
 				   {% for commande in commandes %}
-				  		<li class="list-group-item list-group-item-warning"> {{commande.quantite}} cartouche(s) {{commande.modele}}, en commande depuis le {{commande.datedecommande|date("m/d/Y")}} <a class="btn btn-info btn-xs" href="{{ path('cancelCommande', { 'id': commande.cartouche.id }) }}" title="Commande"><span class="glyphicon glyphicon-shopping-cart"></span> Annuler la commande
+				  		<li class="list-group-item list-group-item-warning"> {{commande.quantite}} cartouche(s) {{commande.modele}}, en commande depuis le {{commande.datedecommande|date("m/d/Y")}} {% if app.user and is_granted('ROLE_ADMIN') %}<a class="btn btn-info btn-xs" href="{{ path('cancelCommande', { 'id': commande.cartouche.id }) }}" title="Commande"><span class="glyphicon glyphicon-shopping-cart"></span> Annuler la commande
                         </a>
 
                         <a class="btn btn-success btn-xs" href="{{ path('validCommande', { 'id': commande.cartouche.id}) }}" title="Commande"><span class="glyphicon glyphicon-shopping-cart"></span> Valider la Réception
                         </a> </li>
+                        {% endif %}
 				  		
 				  	{% endfor %} 
 				   </ul>
