--- a/app/Resources/views/cartridge/index.html.twig
+++ b/app/Resources/views/cartridge/index.html.twig
@@ -122,125 +122,7 @@
 
 {% block javascripts %}
     {{parent()}}
-<script>
-    $(function() {
-      $('tr').each(function(){
-
-        var quantite = $(this).attr("data-quantite");
-
-        if( quantite < 5 && quantite >= 3){
-                $(this).css('background-color', '#FAB861');
-            }
-
-            if( quantite <3){
-                $(this).css('background-color', '#F66060');
-            }
-
-
-      });
-     
-
-
-
-
-    });
-    </script>
-<script> 
-
-    var show_per_page = 3; 
-    var current_page = 0;
-
-    function set_display(first, last) {
-      if($('#listCartridge')){
-        $('#listCartridge').children().css('display', 'none');
-      $('#listCartridge').children().slice(first, last).css('display', 'block');
-      }
-
-      if($('#listPrinter')){
-        $('#listPrinter').children().css('display', 'none');
-      $('#listPrinter').children().slice(first, last).css('display', 'block');
-      }
-      
-    }
-
-    function previous(){
-        if($('.active').prev('.page_link').length) go_to_page(current_page - 1);
-    }
-
-    function next(){
-        if($('.active').next('.page_link').length) go_to_page(current_page + 1);
-    }
-
-    function go_to_page(page_num){
-      current_page = page_num;
-      start_from = current_page * show_per_page;
-      end_on = start_from + show_per_page;
-      set_display(start_from, end_on);
-      $('.active').removeClass('active');
-
-      if($('#cartridges')){
-        $('#cartridges').addClass('active');
-      }
-
-      if($('#printers')){
-        $('#printers').addClass('active');
-      }
-
-      
-      $('#id' + page_num).addClass('active');
-    }  
-
-    $(document).ready(function() {
-      var number_of_pages = 0;
-      if($('#listCartridge')){
-
-       number_of_pages = Math.ceil($('#listCartridge').children().length / show_per_page);
-      }
-
-      else if($('#listPrinter')){
-        number_of_pages = Math.ceil($('#listPrinter').children().length / show_per_page);
-      }
-
-      var nav = '<ul class="pagination"><li><a href="javascript:previous();">&laquo;</a>';
-
-      var i = -1;
-      while(number_of_pages > ++i){
-        nav += '<li class="page_link'
-        if(!i) nav += ' active';
-        nav += '" id="id' + i +'">';
-        nav += '<a href="javascript:go_to_page(' + i +')">'+ (i + 1) +'</a>';
-      }
-      nav += '<li><a href="javascript:next();">&raquo;</a></ul>';
-
-      $('#page_navigation').html(nav);
-      set_display(0, show_per_page);
-      
-    });
-
-  </script>
-    
-   <script type="text/javascript">
-     $(document).ready( function () {
-    $('#tableCartridge').DataTable({
-       "language": {
-            "lengthMenu": "Afficher _MENU_ cartouches par tableau",
-            "zeroRecords": "Aucune cartouche en stock",
-            "info": "Cartouche de _START_ à _END_ sur _TOTAL_ cartouches",
-            "infoEmpty": "Pas de résultats disponibles",
-            "search":         "Rechercher:",
-            "infoFiltered": "( Filtré sur _MAX_ cartouches au total)",
-            "paginate": {
-                "first":      "Début",
-                "last":       "Fin",
-                "next":       "Suivant",
-                "previous":   "Précédent"
-              }
-        },
-
-        "lengthMenu": [ 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 75, 100 ]
-    });
-} );
-   </script>
-
-  
+   <script type="text/javascript" src="{{ asset('js/cartridge/AlertTabPageCartridge.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/cartridge/ListPageCartridge.js') }}"></script>
+  <script type="text/javascript" src="{{ asset('js/cartridge/ParamTabPageCartridge.js') }}"></script>
   {% endblock %}
