--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,65 +1,64 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Gestion Service Informatique - {% block title %}Accueil{% endblock %}</title>
-{% block stylesheets %}
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Gestion Service Informatique - {% block title %}Accueil{% endblock %}</title>
+    {% block stylesheets %}
     {# On charge le CSS de bootstrap depuis le site directement #}
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ asset('css/home.css') }}">
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.15/css/dataTables.bootstrap.min.css">
-{% endblock %}
-</head>
-<body>
-  <div class="container">
-        <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
-            <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="{{ path('homepage') }}">Gestion Informatique</a>
+    {% endblock %}
+  </head>
+  <body>
+    <div class="container">
+      <nav class="navbar navbar-default navbar-fixed-top navbar-inverse" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span> 
+            </button>
+            <a class="navbar-brand" href="{{ path('homepage') }}">Gestion Informatique</a>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+              {% if app.user %}
+              <li class="active"><a href="{{ path('homepage') }}"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp;Accueil</a></li>
+              <li><a href="{{ path('printerpage') }}">Imprimante</a></li>
+              <li><a href="{{ path('cartridgepage') }}">Cartouche</a></li> 
+              {% endif %}
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+              {% if app.user and is_granted('ROLE_ADMIN') %}
+              <li class="{% if adminMenu is defined %}active{% endif %}"><a href="admin"><span class="glyphicon glyphicon-cog"></span> Administration</a></li>
+              {% endif %}
+              {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
+              <li><a>Connecté en tant que <strong>{{ app.user.username }}</strong>{% if app.user and is_granted('ROLE_ADMIN') %} <span class="fa fa-user-secret"></span>{%else%}<span class="glyphicon glyphicon-user"></span>{%endif%}</a></li>
+              <li><a href="logout"><span class="glyphicon glyphicon-log-out"></span> Deconnexion</a></li>  
+              {% else  %}
+              <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
+              {% endif %}
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <div id="content">{% block content %}{% endblock %}</div>
+      <footer class="footer">
+      <p>Outil de gestion pour le service Informatique</p>
+      </footer>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-      {% if app.user %}
-        <li class="active"><a href="{{ path('homepage') }}"><i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp;Accueil</a></li>
-        <li><a href="{{ path('printerpage') }}">Imprimante</a></li>
-        <li><a href="{{ path('cartridgepage') }}">Cartouche</a></li> 
-        {% endif %}
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <!--<li><a href=""><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>-->
-        {% if app.user and is_granted('ROLE_ADMIN') %}
-        <li class="{% if adminMenu is defined %}active{% endif %}"><a href="admin"><span class="glyphicon glyphicon-cog"></span> Administration</a></li>
-        {% endif %}
-        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
-        <li><a>Connecté en tant que <strong>{{ app.user.username }}</strong>{% if app.user and is_granted('ROLE_ADMIN') %} <span class="fa fa-user-secret"></span>{%else%}<span class="glyphicon glyphicon-user"></span>{%endif%}</a></li>
-        <li><a href="logout"><span class="glyphicon glyphicon-log-out"></span> Deconnexion</a></li>  
-        {% else  %}
-        <li><a href="login"><span class="glyphicon glyphicon-log-in"></span> Connexion</a></li>
-        {% endif %}
-      </ul>
-    </div>
-  </div>
-        </nav>
-        <div id="content">{% block content %}{% endblock %}</div>
-        <footer class="footer">
-            <p>Gestion Informatique is a minimalistic CMS built as a showcase for modern PHP development.</p>
- </footer>
-    </div>
-  {% block javascripts %}
+    {% block javascripts %}
     {# Ajoutez ces lignes JavaScript si vous comptez vous servir des fonctionnalités du bootstrap Twitter #}
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.15/js/jquery.dataTables.min.js">
-  </script>
-  <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js">
-  </script>
-  {% endblock %}
-</body>
+    </script>
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.15/js/dataTables.bootstrap.min.js">
+    </script>
+    {% endblock %}
+  </body>
 </html>
